# pkg/api/rank_message.pb.go
@@ -1,0 +1,308 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.28.1
+// 	protoc        (unknown)
+// source: rank_message.proto
+
+package proto
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type RankingResp struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Token      string       `protobuf:"bytes,1,opt,name=token,proto3" json:"token,omitempty"`
+	KeyPhrases []*KeyPhrase `protobuf:"bytes,2,rep,name=keyPhrases,proto3" json:"keyPhrases,omitempty"`
+}
+
+func (x *RankingResp) Reset() {
+	*x = RankingResp{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_rank_message_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *RankingResp) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*RankingResp) ProtoMessage() {}
+
+func (x *RankingResp) ProtoReflect() protoreflect.Message {
+	mi := &file_rank_message_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use RankingResp.ProtoReflect.Descriptor instead.
+func (*RankingResp) Descriptor() ([]byte, []int) {
+	return file_rank_message_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *RankingResp) GetToken() string {
+	if x != nil {
+		return x.Token
+	}
+	return ""
+}
+
+func (x *RankingResp) GetKeyPhrases() []*KeyPhrase {
+	if x != nil {
+		return x.KeyPhrases
+	}
+	return nil
+}
+
+type KeyPhrase struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Text  string  `protobuf:"bytes,1,opt,name=text,proto3" json:"text,omitempty"`
+	Ranks []*Rank `protobuf:"bytes,2,rep,name=ranks,proto3" json:"ranks,omitempty"`
+}
+
+func (x *KeyPhrase) Reset() {
+	*x = KeyPhrase{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_rank_message_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *KeyPhrase) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*KeyPhrase) ProtoMessage() {}
+
+func (x *KeyPhrase) ProtoReflect() protoreflect.Message {
+	mi := &file_rank_message_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use KeyPhrase.ProtoReflect.Descriptor instead.
+func (*KeyPhrase) Descriptor() ([]byte, []int) {
+	return file_rank_message_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *KeyPhrase) GetText() string {
+	if x != nil {
+		return x.Text
+	}
+	return ""
+}
+
+func (x *KeyPhrase) GetRanks() []*Rank {
+	if x != nil {
+		return x.Ranks
+	}
+	return nil
+}
+
+type Rank struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Date     string `protobuf:"bytes,1,opt,name=date,proto3" json:"date,omitempty"`
+	Rank     int32  `protobuf:"varint,2,opt,name=rank,proto3" json:"rank,omitempty"`
+	PaidRank int32  `protobuf:"varint,3,opt,name=paidRank,proto3" json:"paidRank,omitempty"`
+}
+
+func (x *Rank) Reset() {
+	*x = Rank{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_rank_message_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *Rank) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Rank) ProtoMessage() {}
+
+func (x *Rank) ProtoReflect() protoreflect.Message {
+	mi := &file_rank_message_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Rank.ProtoReflect.Descriptor instead.
+func (*Rank) Descriptor() ([]byte, []int) {
+	return file_rank_message_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *Rank) GetDate() string {
+	if x != nil {
+		return x.Date
+	}
+	return ""
+}
+
+func (x *Rank) GetRank() int32 {
+	if x != nil {
+		return x.Rank
+	}
+	return 0
+}
+
+func (x *Rank) GetPaidRank() int32 {
+	if x != nil {
+		return x.PaidRank
+	}
+	return 0
+}
+
+var File_rank_message_proto protoreflect.FileDescriptor
+
+var file_rank_message_proto_rawDesc = []byte{
+	0x0a, 0x12, 0x72, 0x61, 0x6e, 0x6b, 0x5f, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x2e, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x12, 0x04, 0x6d, 0x61, 0x69, 0x6e, 0x22, 0x54, 0x0a, 0x0b, 0x52, 0x61,
+	0x6e, 0x6b, 0x69, 0x6e, 0x67, 0x52, 0x65, 0x73, 0x70, 0x12, 0x14, 0x0a, 0x05, 0x74, 0x6f, 0x6b,
+	0x65, 0x6e, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x74, 0x6f, 0x6b, 0x65, 0x6e, 0x12,
+	0x2f, 0x0a, 0x0a, 0x6b, 0x65, 0x79, 0x50, 0x68, 0x72, 0x61, 0x73, 0x65, 0x73, 0x18, 0x02, 0x20,
+	0x03, 0x28, 0x0b, 0x32, 0x0f, 0x2e, 0x6d, 0x61, 0x69, 0x6e, 0x2e, 0x4b, 0x65, 0x79, 0x50, 0x68,
+	0x72, 0x61, 0x73, 0x65, 0x52, 0x0a, 0x6b, 0x65, 0x79, 0x50, 0x68, 0x72, 0x61, 0x73, 0x65, 0x73,
+	0x22, 0x41, 0x0a, 0x09, 0x4b, 0x65, 0x79, 0x50, 0x68, 0x72, 0x61, 0x73, 0x65, 0x12, 0x12, 0x0a,
+	0x04, 0x74, 0x65, 0x78, 0x74, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x74, 0x65, 0x78,
+	0x74, 0x12, 0x20, 0x0a, 0x05, 0x72, 0x61, 0x6e, 0x6b, 0x73, 0x18, 0x02, 0x20, 0x03, 0x28, 0x0b,
+	0x32, 0x0a, 0x2e, 0x6d, 0x61, 0x69, 0x6e, 0x2e, 0x52, 0x61, 0x6e, 0x6b, 0x52, 0x05, 0x72, 0x61,
+	0x6e, 0x6b, 0x73, 0x22, 0x4a, 0x0a, 0x04, 0x52, 0x61, 0x6e, 0x6b, 0x12, 0x12, 0x0a, 0x04, 0x64,
+	0x61, 0x74, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x64, 0x61, 0x74, 0x65, 0x12,
+	0x12, 0x0a, 0x04, 0x72, 0x61, 0x6e, 0x6b, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x04, 0x72,
+	0x61, 0x6e, 0x6b, 0x12, 0x1a, 0x0a, 0x08, 0x70, 0x61, 0x69, 0x64, 0x52, 0x61, 0x6e, 0x6b, 0x18,
+	0x03, 0x20, 0x01, 0x28, 0x05, 0x52, 0x08, 0x70, 0x61, 0x69, 0x64, 0x52, 0x61, 0x6e, 0x6b, 0x42,
+	0x09, 0x5a, 0x07, 0x2e, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74,
+	0x6f, 0x33,
+}
+
+var (
+	file_rank_message_proto_rawDescOnce sync.Once
+	file_rank_message_proto_rawDescData = file_rank_message_proto_rawDesc
+)
+
+func file_rank_message_proto_rawDescGZIP() []byte {
+	file_rank_message_proto_rawDescOnce.Do(func() {
+		file_rank_message_proto_rawDescData = protoimpl.X.CompressGZIP(file_rank_message_proto_rawDescData)
+	})
+	return file_rank_message_proto_rawDescData
+}
+
+var file_rank_message_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
+var file_rank_message_proto_goTypes = []interface{}{
+	(*RankingResp)(nil), // 0: main.RankingResp
+	(*KeyPhrase)(nil),   // 1: main.KeyPhrase
+	(*Rank)(nil),        // 2: main.Rank
+}
+var file_rank_message_proto_depIdxs = []int32{
+	1, // 0: main.RankingResp.keyPhrases:type_name -> main.KeyPhrase
+	2, // 1: main.KeyPhrase.ranks:type_name -> main.Rank
+	2, // [2:2] is the sub-list for method output_type
+	2, // [2:2] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
+}
+
+func init() { file_rank_message_proto_init() }
+func file_rank_message_proto_init() {
+	if File_rank_message_proto != nil {
+		return
+	}
+	if !protoimpl.UnsafeEnabled {
+		file_rank_message_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*RankingResp); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_rank_message_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*KeyPhrase); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_rank_message_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*Rank); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_rank_message_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   3,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_rank_message_proto_goTypes,
+		DependencyIndexes: file_rank_message_proto_depIdxs,
+		MessageInfos:      file_rank_message_proto_msgTypes,
+	}.Build()
+	File_rank_message_proto = out.File
+	file_rank_message_proto_rawDesc = nil
+	file_rank_message_proto_goTypes = nil
+	file_rank_message_proto_depIdxs = nil
+}
